# rust-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile
src/: main.rs  models.rs  square.rs
src/handlers/user/: mod.rs
src/middlewares/: mod.rs
src/middlewares/counter/: mod.rs
src/middlewares/request_id/: mod.rs
src/models/: models.rs
src/user_controller/: controller_test.rs  interface.rs  mod.rs  user_controller.rs  user_controller_trait.rs
src/user_handler/: mod.rs  user_handler.rs  user_handler_trait.rs
src/user_repo/: mock.rs  mod.rs  user_repo.rs  user_repo_tests.rs  user_repo_trait.rs
src/userrepo/: mod.rs
